fold CUDA in NEWS hierarchy
This commit was SVN r4090.

--- a/NEWS
+++ b/NEWS
@@ -23,6 +23,7 @@ Version 1.4.0
   + Add "custom" interface and "assembler" tools to build multi-node
     topology. See the Multi-node Topologies section in the documentation
     for details.
+  + Add NVIDIA CUDA device detection.
 * Interface improvements
   + Add symmetric_subtree object attribute to ease assumptions when consulting
     regular symmetric topologies.
@@ -53,7 +54,6 @@ Version 1.4.0
   + Fix and/or document the behavior of most inline functions in hwloc/helper.h
     when the topology contains some I/O or Misc objects.
   + Backend documentation enhancements.
-* Add NVIDIA CUDA device detection.
 
 
 Version 1.3.1
